--- a/style.css
+++ b/style.css
@@ -9,14 +9,26 @@
     background-color: #272727;
     text-align: center;
     box-sizing: border-box;
-    font-size: 4vw;
-    padding: 3vw;
+    font-size: 3vw;
+    padding: 2vw;
   }
-  
+
+  h2 {
+    color: #454545;
+  }
+
   p {
     font-size: 1.5em;
     padding: 3vw;
     margin: 3vh;
+  }
+
+  li {
+    display: list-item;
+    list-style-type: decimal;
+    list-style-position: inside;  
+    text-align: center; 
+    /* Bootstrap default settings has a display block, so the above needs to be used to show numbers on an ordered list */
   }
   
   .card {
@@ -61,14 +73,56 @@
     color: #DAAD86;
     padding: 1vw;
     object-fit: fill;
-    font-size: 2vw;
+    font-size: 1.5vw;
   }
   
   .nav a:hover{
     color: #BC986A;
     background-color: #454545
   }
+
+  /* Flexbox container :) */
+  .flex-container__dry,
+  .flex-container__mix,
+  .flex-container__wet {
+    display: flex;
+    justify-content: space-between;
+    padding: 2em;
+  }
   
+/* Flexbox left for food*/
+  .flex-left__dry,
+  .flex-left__mix,
+  .flex-left__wet {
+    width: 30%;
+    padding-top: 2em;
+    padding-left: 1em;
+    flex-wrap: wrap;
+  }
+
+  /* Sizes image for food */
+  .flex-left__image--dry,
+  .flex-left__image--mix,
+  .flex-left__image--wet {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  /* Flexbox right for food */
+  .flex-right__dry,
+  .flex-right__mix,
+  .flex-right__wet {
+    width: 70%;
+  }
+
+  /* Paragraph for food */
+  .flex-right__dry p,
+  .flex-right__mix p,
+  .flex-right__wet p {
+    font-size: 1em;
+  }
+
   #home-paragraph,
   #breed-paragraph {
     padding: 1vw;
@@ -77,12 +131,7 @@
   /*   Around 20px font for these paragraphs */
     font-size: 1.25em;
   }
-  
-  #diet-paragraph {
-    font-size: 1em;
-    text-align: start;
-  }
-  
+
   /* For the small screen homies */
   @media (max-width: 576px) {
       p {
@@ -102,5 +151,9 @@
   
       .nav a {
         font-size: 2vh;
+      }
+
+      .flex-right__dry {
+        max-width: fit-content;
       }
   }
